--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: blog
-        path: $GITHUB_WORKSPACE/out/**
+        path: $GITHUB_WORKSPACE/out/
