--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Build website with Hugo
       uses: srt32/hugo-action@v0.0.3
       with:
-        args: --source $GITHUB_WORKSPACE/src --destination $GITHUB_WORKSPACE/out --environment production
+        args: --source src --destination out --environment production
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: blog
-        path: $GITHUB_WORKSPACE/out/
+        path: out/
