--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Deploy to GitHub pages
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
@@ -18,14 +14,15 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
+        path: src
 
     - name: Build website with Hugo
       uses: srt32/hugo-action@v0.0.3
       with:
-        args: --environment production
+        args: --source $GITHUB_WORKSPACE/src --destination $GITHUB_WORKSPACE/out --environment production
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: blog
-        path: public/
+        path: ${{ github.workspace }}/out/
