--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
         cd $GITHUB_WORKSPACE/out
         git config user.name "Hugo Bot"
         git config user.email "hugobot@thomaslevesque.net"
+        echo "machine github.com" >> ~/.netrc
+        echo "login thomaslevesque" >> ~/.netrc
+        echo "password $GITHUB_TOKEN"
         git add .
         git commit -m "Publish site for $GITHUB_SHA"
         git push
