--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,6 @@ jobs:
     - name: Checkout destination
       uses: actions/checkout@v2
       with:
-        repository: thomaslevesque/blog-fr
         ref: gh-pages
         path: out
 
@@ -33,9 +32,9 @@ jobs:
         cd $GITHUB_WORKSPACE/out
         git config user.name "Hugo Bot"
         git config user.email "hugobot@thomaslevesque.net"
-        echo "machine github.com" >> ~/.netrc
-        echo "login thomaslevesque" >> ~/.netrc
-        echo "password $GITHUB_TOKEN"
+        #echo "machine github.com" >> ~/.netrc
+        #echo "login thomaslevesque" >> ~/.netrc
+        #echo "password $GITHUB_TOKEN" >> ~/.netrc
         git add .
         git commit -m "Publish site for $GITHUB_SHA"
         git push
